# scratch_monkey

./: .gitignore  CLAUDE.md  Dockerfile  HELP.md  README.md  UI_LAYOUT.md  install.sh  justfile  pyproject.toml  run.sh  scratch.toml.default
scripts/: create.sh  export.sh  list.sh  run.sh  skel.sh
specs/: redesign.md  scratch-monkey.md
src/scratch_monkey/: __init__.py  config.py  container.py  export.py  instance.py  overlay.py  run_args.py  shared.py
src/scratch_monkey/cli/: main.py
src/scratch_monkey/gui/: main.py  models.py
src/scratch_monkey/gui/views/: config_editor.enaml  create_dialog.enaml  instance_detail.enaml  instance_list.enaml  main_window.enaml
src/scratch_monkey/gui/views/__enamlcache__/: instance_detail.enaml-cpython-314-cv26.enamlc  instance_list.enaml-cpython-314-cv26.enamlc  main_window.enaml-cpython-314-cv26.enamlc
tests/: conftest.py  test_cli_commands.py  test_cli_gui.py  test_cli_run.py  test_config.py  test_container.py  test_export.py  test_gui_models.py  test_instance.py  test_overlay.py  test_run_args.py  test_security.py  test_shared.py
